--- a/package.json
+++ b/package.json
@@ -54,5 +54,17 @@
     "postcss": "^8.4.12",
     "tailwindcss": "^3.0.24",
     "typescript": "~4.6.2"
+  },
+  "prettier": {
+    "tabWidth": 4,
+    "printWidth": 140,
+    "singleQuote": true,
+    "jsxBracketSameLine": false,
+    "disableLanguages": [
+      "html",
+      "css",
+      "scss"
+    ],
+    "formatOnSave": false
   }
 }
