--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "karma-coverage": "~2.1.0",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
+    "ng-packagr": "^13.0.0",
     "postcss": "^8.4.12",
     "tailwindcss": "^3.0.24",
     "typescript": "~4.6.2"
