--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@tailwindcss/typography": "^0.5.2",
     "express": "^4.15.2",
     "ng-tw": "^0.0.3",
+    "ngx-google-analytics": "^13.0.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
